--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="title"> CSMJU | YEARBOOKS </div>
     <div class="sub_title">CSMJU is closely connected, We are ready to be programmers. to develop technology </div>
     <div class="btns">
-      <a href="/HomePage/Homepage1.html"><button>Continue</button></a>
+      <a href="/Homepage1.html"><button>Continue</button></a>
     </div>
   </div>
 </body>
