--- a/homepage2.html
+++ b/homepage2.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </nav>
-  <img src="/HomePage/6.jpg">
+  <img src="/6.jpg">
   <div1 class="container">
     <h2>CSMJU | Generation</h2>
     <section class="services">
