--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
       </ul>
     </div>
   </nav>
-  <img src="/HomePage/6.jpg" width="1920" height="1080">
+  <img src="/6.jpg" width="1920" height="1080">
   <div1 class="container">
     <h2 wi>CSMJU | Generation 2 </h2>
     <section class="services">
