--- a/Homepage1.html
+++ b/Homepage1.html
@@ -41,7 +41,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, reprehenderit.</p>
         </div>
       </div>
-      <div href="/page/page.html" class="card">
+      <div href="/page.html" class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
           <div class="title">CSMJU GEN 2</div>
