--- a/page.html
+++ b/page.html
@@ -48,7 +48,7 @@
           <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <a href="#">&raquo;</a>
-          <a href="/profile/profile.html"> MR.2 (Exanple)</a>
+          <a href="/profile.html"> MR.2 (Exanple)</a>
           <a href="#">&raquo;</a>
         </div>
       </div>
