--- a/Homepage1.html
+++ b/Homepage1.html
@@ -46,7 +46,7 @@
           <div class="icon"><i class="#"></i></div>
           <div class="title">CSMJU GEN 2</div>
           <a href="#">&raquo;</a>
-          <a href="/page/page.html"> This is Example generatoin</a>
+          <a href="/page.html"> This is Example generatoin</a>
           <a href="#">&raquo;</a>
         </div>
       </div>
@@ -84,11 +84,11 @@
   </section>
   <div class="justify-content-center pagination">
     <a href="#">&laquo;</a>
-    <a href="/HomePage/Homepage1.html" class="active">1</a>
-    <a href="/HomePage/homepage2.html">2</a>
-    <a href="/HomePage/homepage3.html">3</a>
-    <a href="/HomePage/homepage4.html">4</a>
-    <a href="/HomePage/homepage5.html">5</a>
+    <a href="/Homepage1.html" class="active">1</a>
+    <a href="/homepage2.html">2</a>
+    <a href="/homepage3.html">3</a>
+    <a href="/homepage4.html">4</a>
+    <a href="/homepage5.html">5</a>
     <a href="#">&raquo;</a>
   </div>
 
