--- a/homepage5.html
+++ b/homepage5.html
@@ -82,11 +82,11 @@
   </section>
   <div class="justify-content-center pagination">
     <a href="#">&laquo;</a>
-    <a href="/HomePage/Homepage1.html" >1</a>
-    <a href="/HomePage/homepage2.html">2</a>
-    <a href="/HomePage/homepage3.html" >3</a>
-    <a href="/HomePage/homepage4.html">4</a>
-    <a href="/HomePage/homepage5.html" class="active">5</a>
+    <a href="/Homepage1.html" >1</a>
+    <a href="/homepage2.html">2</a>
+    <a href="/homepage3.html" >3</a>
+    <a href="/homepage4.html">4</a>
+    <a href="/homepage5.html" class="active">5</a>
     <a href="#">&raquo;</a>
   </div>
 
