--- a/page.html
+++ b/page.html
@@ -115,10 +115,10 @@
   </section>
   <div class="justify-content-center pagination">
     <a href="#">&laquo;</a>
-    <a href="/page/page.html" class="active">1</a>
-    <a href="/page/page2.html">2</a>
-    <a href="/page/page3.html">3</a>
-    <a href="/page/page4.html">4</a>
+    <a href="/page.html" class="active">1</a>
+    <a href="/page2.html">2</a>
+    <a href="/page3.html">3</a>
+    <a href="/page4.html">4</a>
     <a href="#">&raquo;</a>
   </div>
 
