--- a/page3.html
+++ b/page3.html
@@ -113,10 +113,10 @@
   </section>
   <div class="justify-content-center pagination">
     <a href="#">&laquo;</a>
-    <a href="/page/page.html" >1</a>
-    <a href="/page/page2.html" >2</a>
-    <a href="/page/page3.html" class="active">3</a>
-    <a href="/page/page4.html">4</a>
+    <a href="/page.html" >1</a>
+    <a href="/page2.html" >2</a>
+    <a href="/page3.html" class="active">3</a>
+    <a href="/page4.html">4</a>
     <a href="#">&raquo;</a>
   </div>
 
