--- a/page4.html
+++ b/page4.html
@@ -65,10 +65,10 @@
   </section>
   <div class="justify-content-center pagination">
     <a href="#">&laquo;</a>
-    <a href="/page/page.html" >1</a>
-    <a href="/page/page2.html" >2</a>
-    <a href="/page/page3.html">3</a>
-    <a href="/page/page4.html"  class="active">4</a>
+    <a href="/page.html" >1</a>
+    <a href="/page2.html" >2</a>
+    <a href="/page3.html">3</a>
+    <a href="/page4.html"  class="active">4</a>
     <a href="#">&raquo;</a>
   </div>
 
