--- a/page3.html
+++ b/page3.html
@@ -37,7 +37,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <p>MR.19</p>
         </div>
@@ -45,7 +45,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <p>MR.20</p>
         </div>
@@ -53,7 +53,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.21</p>
         </div>
@@ -61,7 +61,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.22/p>
         </div>
@@ -69,7 +69,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.23</p>
         </div>
@@ -77,7 +77,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.24</p>
         </div>
@@ -85,7 +85,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.25</p>
         </div>
@@ -93,7 +93,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.26</p>
         </div>
@@ -101,7 +101,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.27</p>
         </div>
