--- a/page4.html
+++ b/page4.html
@@ -37,7 +37,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <p>MR.28</p>
         </div>
@@ -45,7 +45,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <p>MR.29</p>
         </div>
@@ -53,7 +53,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.30</p>
         </div>
