--- a/page.html
+++ b/page.html
@@ -37,7 +37,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <p>MR.1</p>
         </div>
@@ -45,7 +45,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2</div>
           <a href="#">&raquo;</a>
           <a href="/profile.html"> MR.2 (Exanple)</a>
@@ -55,7 +55,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.3</p>
         </div>
@@ -63,7 +63,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.4/p>
         </div>
@@ -71,7 +71,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.5</p>
         </div>
@@ -79,7 +79,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.6</p>
         </div>
@@ -87,7 +87,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.7</p>
         </div>
@@ -95,7 +95,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.8</p>
         </div>
@@ -103,7 +103,7 @@
       <div class="card">
         <div class="content">
           <div class="icon"><i class="#"></i></div>
-          <img src="/page/หน้าตรง.jpg" width="65px" height="90px" alt="">
+          <img src="/หน้าตรง.jpg" width="65px" height="90px" alt="">
           <div class="title">CSMJU GEN 2 </div>
           <p>MR.9</p>
         </div>
